# social-sentiment-pipeline

./: .editorconfig  .gitignore  README.md
bi/powerbi/: README.md
cpp_ingest/: CMakeLists.txt
cpp_ingest/include/: http_client.hpp  writer.hpp  youtube_client.hpp  youtube_errors.hpp
cpp_ingest/src/: http_client.cpp  main.cpp  writer.cpp  youtube_client.cpp  youtube_errors.cpp
py_transform/: export_csv.py  requirements.txt  transform_comments.py
